--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 applications:
   - disk_quota: 1024M
     host: ha--node-starter
-    name: Hack Academy - Node Starter
+    name: Hackademy - Node Starter
     path: .
     domain: mybluemix.net
     instances: 1
