--- a/.gitattributes
+++ b/.gitattributes
@@ -34,5 +34,6 @@
 *.sql text
 *.sh text
 
-# Everything that isn't text should be binary. Travis git converts cr/lf on png
+# Everything that isn't text should be binary. Travis git converts cr/lf on png. Still trying to fix png
 * binary
+*.png -crlf -diff
